--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button onclick="generateRoulette(warmDishes, 'rouletteResult2')">Spin</button>
         <p id="rouletteResult2"></p>
         
-        <h2>Roulette - Salat</h2>
+        <h2>Roulette - Salad</h2>
         <button onclick="generateRoulette(salatItems, 'rouletteResult3')">Spin</button>
         <p id="rouletteResult3"></p>
         
