--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <div id="scoresheet" class="tab">
         <h2>Scoresheet</h2>
         <div>
-            <label>Player 1: <input type="text" id="player1" oninput="updatePlayerNames()"></label>
-            <label>Player 2: <input type="text" id="player2" oninput="updatePlayerNames()"></label>
-            <label>Player 3: <input type="text" id="player3" oninput="updatePlayerNames()"></label>
-            <label>Player 4: <input type="text" id="player4" oninput="updatePlayerNames()"></label>
+            <label>Person 1: <input type="text" id="player1" oninput="updatePlayerNames()"></label>
+            <label>Person 2: <input type="text" id="player2" oninput="updatePlayerNames()"></label>
+            <label>Person 3: <input type="text" id="player3" oninput="updatePlayerNames()"></label>
+            <label>Person 4: <input type="text" id="player4" oninput="updatePlayerNames()"></label>
         </div>
         <div id="scoresheetTables"></div>
         <h3>Items not yet scored</h3>
